
Table display now uses the background color cyan for all cells containing new lines
  not only in SQL result tables and in Object tree "Content" tables.

Table cell data popup now offers find, Xml/Json-reformatting and export functions for all tables.
  To open the cell data popup double-click a table cell.

Bug fixes:

#1531 MySQL Plugin: SMALLINT UNSIGNED columns showed <Error> when the fields value exceeded 32767.
  Note: To work with MYSQL's SMALLINT UNSIGNED or TINYINT UNSIGNED types the MySQL Plugin must be installed.

SQL editor/SQL result tabs/marking SQL result tab headers:
  Memory and CPU usage was improved in case SQLs where compared
  disregarding comments line feeds and other white spaces.
  See menu File --> Global Preferences --> tab SQL --> section "SQL result tab header".

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/45#issuecomment-2455169657
  Fixed NullPointerException that occurred in some tables.

Saved Session groups management dialog: Fixed IllegalArgumentException when empty was deleted.

Fixed StringIndexOutOfBoundsException when executed SQL contains the German Umlaut sz.

Change tracking, left gutter popup to show deleted changes:
  Fixed NullPointerException when popup was too long.

Find in preferences/configurations dialog:
  Double clicking any empty node now always shows the preference/configuration.

SQL result table: Section count, position and sum were updated at the end of a selection only,
  not as the used to be during the selection, too.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/42
  Refactoring "Add column" raised "IllegalArgumentException: SQLDatabaseMetaData == null."
  See table in Object tree --> right mouse click --> Refactoring --> Column --> Add Column

SQL result: When a SQL result was rerun, the SQL displayed on the result's info tab lost comments.

SQL editor/SQL result tabs, SQL result tab header marks: