@@ -18,16 +18,16 @@
  */
 package net.sourceforge.squirrel_sql.client.session.mainpanel;
 
-import java.awt.Window;
-import java.awt.event.ActionEvent;
-import javax.swing.JComponent;
-import javax.swing.JTabbedPane;
-
 import net.sourceforge.squirrel_sql.fw.datasetviewer.IDataSetViewer;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.TableState;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.coloring.markduplicates.MarkDuplicatesChooserController;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.columndisplaychoice.ResultDataSetAndCellDetailDisplayHandler;
 import net.sourceforge.squirrel_sql.fw.id.IntegerIdentifier;
+
+import javax.swing.JComponent;
+import javax.swing.JTabbedPane;
+import java.awt.Window;
+import java.awt.event.ActionEvent;
 
 public interface IResultTab
 {
@@ -48,6 +48,8 @@ public interface IResultTab
    String getViewableSqlString();
 
    void disposeTab();
+
+   void addResultTabCloseListener(ResultTabCloseListener l);
 
    void returnToTabbedPane();
 
